--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
+  "homepage": "https://github.com/seanle0405/filmsfinder-frontend.git",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
