--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "universal-cookie": "^4.0.1"
   },
   "homepage": "https://seanle0405.github.io/filmsfinder-frontend/",
   "scripts": {
